issue where images were not showing

--- a/myWebsite/spaceInvaders/styling.css
+++ b/myWebsite/spaceInvaders/styling.css
@@ -2,6 +2,6 @@
     border: 1px solid black
 }
 
-img{
+/* img{
     display: none;
-}
+} */
