--- a/myWebsite/tictactoe/tictactoe.css
+++ b/myWebsite/tictactoe/tictactoe.css
@@ -35,7 +35,7 @@ td{
 
 .x{
     height: 100px;
-    width: 100;
+    width: 100px;
 }
 .circle{
     height: 100px;
